refactor(test): update TaskServiceTest to use TaskRequestDTO and TaskResponseDTO